[package]
name = "jet-fixed-terms-crank-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["time", "rt"] }
toml = "0.4"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anchor-lang = { workspace = true }

solana-client = { workspace = true }
solana-cli-config = { workspace = true }
solana-clap-utils = { workspace = true }
solana-sdk = "1.14"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"] }

jet-ctl-cli = { workspace = true }
jet-margin-sdk = { workspace = true }
jet-environment = { workspace = true }
jet-simulation = { workspace = true }