[package]
name = "jet-fixed-term-crank"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["time", "rt"] }
toml = "0.4"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anchor-lang = "0.27"

solana-client = "1.14"
solana-cli-config = "1.14"
solana-clap-utils = "1.14"
solana-sdk = "1.14"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "fill-event", features = ["lib", "utils"] }

jet-ctl-cli = { path = "../ctl" }
jet-margin-sdk = { path = "../../libraries/rust/margin" }
jet-environment = { path = "../../libraries/rust/environment" }
jet-simulation = { path = "../../libraries/rust/simulation" }
jet-solana-client = { path = "../../libraries/rust/solana-client" }