[package]
name = "jet-ctl-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "jetctl"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
borsh = "0.9"
chrono = "0.4"
bs58 = "0.4"
flate2 = "1.0"
heck = "0.4"
toml = "0.5"
futures = "0.3"
bytemuck = "1"
bincode = "1"
tokio = { version = "1.0", features = ["time", "rt"] }
lazy_static = "1.4.0"
shellexpand = "2.1.0"

serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5"
serde_json = "1.0"

dialoguer = "0.10"
indicatif = "0.16"
clap = { version = "3.2", features = ["derive", "env"] }
comfy-table = "6"

anchor-syn = { git = "https://github.com/jet-lab/anchor", branch = "master", features = ["idl"] }
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
spl-governance = { git = "https://github.com/jet-lab/solana-program-library", branch = "temp-fix-spl-deps", features = ["no-entrypoint"] }
pyth-sdk-solana = "0.4"

solana-account-decoder = "1.10"
solana-clap-utils = "1.10"
solana-cli-config = "1.10"
solana-client = "1.10"
solana-sdk = "1.10"
spl-token = "3"

# not used directly, but indirectly to enable ledger support via `solana-clap-utils`
solana-remote-wallet = "1.10"

serum_dex = "0.5"
jet-program-common = { path = "../../libraries/rust/program-common" }
jet-margin-sdk = { path = "../../libraries/rust/margin" }