[package]
name = "jet-ctl-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "jetctl"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.66"
borsh = "0.9"
chrono = { version = "0.4", default-features = false, features = ["std"] }
bs58 = "0.4"
flate2 = "1.0"
heck = "0.4"
toml = "0.5"
futures = "0.3"
bytemuck = "1"
bincode = "1"
tokio = { version = "1.0", features = ["time", "rt"] }
lazy_static = "1.4.0"
shellexpand = "2.1.0"
env_logger = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5"
serde_json = "1.0"

dialoguer = "0.10"
indicatif = "0.16"
clap = { version = "3.2", features = ["derive", "env"] }
comfy-table = "6"

anchor-syn = { version = "0.26", features = ["idl"] }
anchor-lang = { workspace = true }
spl-governance = { workspace = true }
pyth-sdk-solana = { workspace = true }

solana-account-decoder = "1.14"
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }

# not used directly, but indirectly to enable ledger support via `solana-clap-utils`
solana-remote-wallet = "1.14"

serum_dex = "0.5"
jet-program-common = { workspace = true }
jet-margin-sdk = { workspace = true }
jet-environment = { workspace = true }
jet-client-native = { workspace = true }
jet-solana-client = { workspace = true }
