[package]
name = "jet-oracle-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
humantime = "2"
serde_json = "1"
clap = { version = "3.2", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["time", "rt"] }

pyth-sdk-solana = "0.6"
solana-clap-utils = "1.10"
solana-cli-config = "1.10"
solana-client = "1.10"
solana-sdk = "1.10"

spl-token-swap = { version = "2.1", features = ["no-entrypoint"] }
spl-token = "3"

anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }

jet-margin-sdk = { path = "../../libraries/rust/margin" }
jet-simulation = { git = "https://github.com/jet-lab/jet-simulation", branch = "master" }