[package]
name = "jet-oracle-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
humantime = "2"
serde_json = "1"
clap = { version = "3.2", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["time", "rt"] }

pyth-sdk-solana = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }

spl-token = { workspace = true }

anchor-lang = { workspace = true }

jet-margin-sdk = { workspace = true }
jet-simulation = { workspace = true }
jet-environment = { workspace = true }
jet-solana-client = { workspace = true }