[package]
name = "jet-oracle-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
humantime = "2"
serde_json = "1"
clap = { version = "3.2", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["time", "rt"] }

pyth-sdk-solana = "0.7"
solana-clap-utils = "1.14"
solana-cli-config = "1.14"
solana-client = "1.14"
solana-sdk = "1.14"

spl-token = "3"

anchor-lang = "0.27"

jet-margin-sdk = { path = "../../libraries/rust/margin" }
jet-simulation = { path = "../../libraries/rust/simulation" }
jet-environment = { path = "../../libraries/rust/environment" }
jet-solana-client = { path = "../../libraries/rust/solana-client" }